# ChangeLog for dev-haskell/time
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.18 2010/01/02 12:33:17 fauli Exp $

  02 Jan 2010; Christian Faulhammer <fauli@gentoo.org> time-1.1.2.4.ebuild:
  Transfer Prefix keywords

*time-1.1.2.4 (19 Apr 2009)

  19 Apr 2009; Lennart Kolmodin <kolmodin@gentoo.org> +time-1.1.2.4.ebuild:
  Version bump.

  04 Oct 2008; Ferris McCormick <fmccor@gentoo.org> time-1.1.2.0.ebuild:
  Sparc stable --- Bug #230919 and Bug #239368.

  15 Jul 2008; Jeroen Roovers <jer@gentoo.org> time-1.0.ebuild,
  time-1.1.1.ebuild, time-1.1.2.0.ebuild:
  Marked ~hppa too.

  06 Jul 2008; Markus Meier <maekke@gentoo.org> time-1.1.2.0.ebuild:
  amd64/x86 stable, bug #230919

*time-1.1.2.0 (20 Dec 2007)

  20 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +time-1.1.2.0.ebuild:
  New version. Released with ghc-6.8 but works with ghc-6.6.

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> time-1.1.1.ebuild:
  amd64 stable wrt #201984

  16 Dec 2007; nixnut <nixnut@gentoo.org> time-1.1.1.ebuild:
  Stable on ppc wrt bug 201984

  13 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> time-1.0.ebuild,
  time-1.1.1.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> time-1.1.1.ebuild:
  Sparc stable --- part of Bug #201984.

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> time-1.1.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> time-1.1.1.ebuild:
  stable x86, bug 201984

  11 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> time-1.1.1.ebuild:
  Marked ~ia64.

*time-1.1.1 (08 Jul 2007)

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +time-1.1.1.ebuild:
  New version from ghc-6.6.1 extralibs collection.

  08 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> time-1.0.ebuild:
  Use dev-lang/ghc rather than virtual/ghc.
