@@ -5,16 +5,18 @@ DIST ghc-6.6-src-extralibs.tar.bz2 2015443 RMD160 63d87d02f42efc032c20de7394f3b2
 DIST ghc-6.6.1-src-extralibs.tar.bz2 1928527 RMD160 1c18c85d978c4b3369132e247c823aaa90ea8530 SHA1 1398f6c35191d52410a2e066b382635dff0d8d6d SHA256 d162a82fc388fdd48c327b09bb6d778f2313d12d5282f3b120ac08a5d4e78902
 DIST time-1.1.2.0.tar.gz 51035 RMD160 8931ed32b9c2463e0f92fa3cea08cd3ffac11c7c SHA1 770dd3f2db6958860475cd765483e901b2fa647b SHA256 09d1fdcab8fb176d0001b7ffd4bee7d4bf1c77b8e5f333aff01f2ffe19c6a47e
 DIST time-1.1.2.4.tar.gz 53062 RMD160 adfbe1644a2f6f67f2715504ddac13fee7299b39 SHA1 f6de0ecfb1182687a8872762cc7ed30b479d2a0d SHA256 11dfcb9b5ca76428a7a31019928c3c1898320f774e5d3df8e4407580d074fad3
+DIST time-1.1.4.tar.gz 53779 RMD160 b586092e23d68bc415d55bd76b569f6f51c192fd SHA1 779c6d75bd36f0c00e93f0acc87bf7e44e5bef5f SHA256 5e3fef3dfba8a6f8a05dcfc3974e1595fb86f5c032dc28fbd2ce7951f0ffac1c
 EBUILD time-1.0.ebuild 640 RMD160 eaf0219e7ec96f00e2448696136936459716a8bc SHA1 2f2ef8b1fe7e9ca97594d9b319bbe20250c7945e SHA256 35a6d6e191e4a9f4bb9dbf8022bacba4399e560a7339732c65bbd3689c7cab2d
 EBUILD time-1.1.1.ebuild 646 RMD160 ba2774059f11384d47fb6be577af8584c27558b9 SHA1 0ed7e4a7cade9f254a5d5a920e85da02b2ab2a82 SHA256 8f677c6f5a047ef7c0e9038d5edcc5d15bb1e61ec8a4daa3371337fdd94581c4
 EBUILD time-1.1.2.0.ebuild 564 RMD160 51fd18e7f5627462ac7057185079448ed423f5c9 SHA1 285825d56932b22bed5bb442be69a9808ca2b45a SHA256 65b694e8d858bcefd1a19e38176f9799b1bf5eaa332414291aac7cc9a7d13222
 EBUILD time-1.1.2.4.ebuild 635 RMD160 f5f6b5283b49847a843b6bacb455b4f800d0b37f SHA1 dd60a32de8eacc8f9c59e162ed92360629ccc507 SHA256 65327e86bb82068359b935a3e867a5a29d66345d3957f5ce6d55cb9ba73ffeda
-MISC ChangeLog 2290 RMD160 cf4f8c6b85727fcab67a06c830be742d55b483d1 SHA1 fa7328307425c9d8a04e7127a655ffea4cfac700 SHA256 2a4f22a28f03196a95abde1a45742704bb64c399e1436ff1973490bfbe03b859
+EBUILD time-1.1.4.ebuild 643 RMD160 30fe104e549a047b100413a1c6adb06f888741c3 SHA1 573b11bc6259d91d74817c4e6df94b1478aa7ee0 SHA256 e4d13b7468548329bd991f0720b4c04611ba98775e20827bde566504f10d594d
+MISC ChangeLog 2411 RMD160 5431528b97d6f50db09a15a63f5e394f64df9bf7 SHA1 62882f45e014a01bf34ed78874de02ac82ad08fa SHA256 18352c1a541ff571559e55b3d70739242fdb652a974d82c1bde7429f9a99b495
 MISC metadata.xml 223 RMD160 7783e6057effb8b8f0b79cffe8b557b32c633839 SHA1 7b962c77f2e38479a9d1621ec8d307ca9f761753 SHA256 1d00c8be162a6cb87b3de440b3e63e10b39c12d56e8fbfe592e75aed872b2508
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAks/PRMACgkQNQqtfCuFnePlkACfadPZZqwpYN/eTzVibWyKY4Ko
-95gAn38zoY6TiIW4pJXft36u4tPl2hu4
-=PIJH
+iEYEARECAAYFAkt0ctwACgkQ1n/CYbXjntLkrwCgsI4jKeFpINdImn3kVdbZY3zi
+5LEAn2VaRlDueFcU0TFiKMrTtVKD2WFb
+=GCFq
 -----END PGP SIGNATURE-----
