@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/time
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.18 2010/01/02 12:33:17 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/time/ChangeLog,v 1.19 2010/02/11 21:13:14 kolmodin Exp $
+
+*time-1.1.4 (26 Jan 2010)
+
+  26 Jan 2010; Lennart Kolmodin <kolmodin@gentoo.org> +time-1.1.4.ebuild:
+  Version bump.
 
   02 Jan 2010; Christian Faulhammer <fauli@gentoo.org> time-1.1.2.4.ebuild:
   Transfer Prefix keywords
